Changes for 2.2.8rc1

New features:
.......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Polish and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-8486] fixed re-linking templates with web scenarios (Krists)
..F....... [ZBX-8919] fixed range selection in graphs in IE10 and IE11 (arvids)
A......... [ZBX-9017] fixed hostgroup.create and hostgroup.update API calls allowing setting readonly "internal" param (arvids)
..F....... [ZBX-9004] fixed visible corners in table cells in eventlog history (arvids)
..F....... [ZBX-8928] fixed history-related macros to obey the ZBX_HISTORY_PERIOD (arvids)
........S. [ZBX-8952] fixed bug where an action condition of matching parent templates of a trigger worked with only the first template (Juris)
.......PS. [ZBX-8982] turned strict OID validation off for single-variable SNMP requests (asaveljevs)
.......PS. [ZBX-8328] fixed UTF-8 string truncation for IBM DB2 databases to fit the column width (wiper)
..F....... [ZBX-8850] fixed fatal error in graph generation when there is no data and ZBX_UNITS_ROUNDOFF_LOWER_LIMIT is set to "2" (Krists)
.......PS. [ZBX-8476] fixed queue being calculated incorrectly when there is even a slight time difference between server and proxy (asaveljevs)
A......... [ZBX-8832] fixed template application inheritance when linking template other templates (Krists)
........S. [ZBX-8978] fixed propagation of the interfaces into discovered hosts in same order as in the parent host (Sasha)
....I..PS. [ZBX-8849] fixed redundant linking with -lcrypto when linking with Net-SNMP (asaveljevs)
...G...PS. [ZBX-8913] fixed JSON validation sometimes failing to process utf-8 sequences (wiper)
.D........ [ZBX-6542] updated description of HousekeepingFrequency parameter in the default server and proxy configuration files (Sasha)